# raspberrypi_ws

./: .gitignore
src/caramelo_controller/: package.xml  setup.py
src/caramelo_controller/caramelo_controller/: twist_converter_node.py
src/caramelo_controller/config/: robot_controllers.yaml
src/caramelo_controller/launch/: controller.launch.py  teleop_keyboard.launch.py
src/caramelo_description/: package.xml  setup.py
src/caramelo_description/launch/: display.launch.py
src/caramelo_description/urdf/: lidar_sensor.xacro  robot.urdf.xacro  robot_base.xacro  robot_mecanum_wheel.xacro  robot_ros2_control.xacro
src/caramelo_hardware/: CMakeLists.txt  package.xml  plugin.xml
src/caramelo_hardware/caramelo_hardware/: arduino_encoder_reciver.py  mpu6050_driver.py  pca9685_controller.py
src/caramelo_hardware/include/caramelo_hardware/: caramelo_interface.hpp  caramelo_interface_imu.hpp  proxy_system.hpp
src/caramelo_hardware/launch/: hardware.launch.py
src/caramelo_hardware/src/: caramelo_interface.cpp  caramelo_interface_imu.cpp  proxy_system.cpp
src/caramelo_localization/: package.xml  setup.py
src/caramelo_localization/caramelo_localization/: kalman_filter.py
src/caramelo_localization/config/: ekf.yaml  ekf_mec_mobile.yaml
src/raspberry_bringup/: package.xml  setup.cfg  setup.py
src/raspberry_bringup/launch/: bringup.launch.py  robot_state_publisher.launch.py
src/raspberry_bringup/raspberry_bringup/: odometry_node.py  pac9685_controller.py  readEncoder_teste.py
src/raspberry_exemples/: package.xml  setup.cfg  setup.py
src/raspberry_exemples/raspberry_exemples/: encoder.py  encoder_gpiod.py  encoder_node_simples.py  encoder_simple.py  pca9685_calibration.py  pca9685_node_simple.py  publisher_hello.py  servo_teste.py
src/raspberrypi_bringup/: CMakeLists.txt  package.xml
src/raspberrypi_bringup/launch/: bringup.launch.py
src/raspberrypi_bringup/raspberrypi_bringup/: pca9685_controller.py
