<?xml version="1.0"?>
<package format="3">
  <name>caramelo_hardware</name>
  <version>0.0.1</version>
  <description>Hybrid hardware proxy for Caramelo robot (ros2_control -> topic -> Python PCA9685)</description>
  <maintainer email="maintainer@example.com">caramelo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>
  <depend>libserial-dev</depend>

  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-smbus</exec_depend>
  <exec_depend>umx_driver</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
