<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raspberry_bringup</name>
  <version>0.0.0</version>
  <description>Bringup do robô Caramelo (publicação de descrição, ros2_control, ponte PCA9685).</description>
  <maintainer email="raspberrypi@todo.todo">raspberrypi</maintainer>
  <license>TODO: License declaration</license>

  <!-- Runtime / build deps -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>

  <!-- Controllers and related description packages -->
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>mecanum_drive_controller</exec_depend>
  <exec_depend>caramelo_description</exec_depend>
  <exec_depend>caramelo_controller</exec_depend>
  <exec_depend>caramelo_hardware</exec_depend>

  <!-- Tests -->
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
