<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raspberrypi_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="victoroliveiraayres@gmail.com">linux24-04</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>mecanum_drive_controller</exec_depend>
  <exec_depend>caramelo_description</exec_depend>
  <exec_depend>caramelo_controller</exec_depend>
  <exec_depend>caramelo_hardware</exec_depend>
  <exec_depend>caramelo_localization</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>um7</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
